--- a/TimeTravel/TimeTravel.csproj
+++ b/TimeTravel/TimeTravel.csproj
@@ -38,6 +38,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -59,20 +60,18 @@
     <PackageReference Include="DynamoVisualProgramming.ZeroTouchLibrary" version="2.0.*">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Events.cs" />
+    <Compile Include="src\Json.cs" />
+    <Compile Include="src\Snapshot.cs" />
     <Compile Include="src\TimeTravelViewExtension.cs" />
-    <Compile Include="src\TimeTravelWindowViewModel.cs" />
-    <Compile Include="src\TimeTravelWindow.xaml.cs">
-      <DependentUpon>TimeTravelWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="src\TimeTravelWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <Compile Include="src\UI.cs" />
+    <Compile Include="src\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="dist\" />
