--- a/TimeTravel.Tests/TimeTravel.Tests.csproj
+++ b/TimeTravel.Tests/TimeTravel.Tests.csproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnapshotTests.cs" />
+    <Compile Include="src\NodePresetTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
